trim garbage from realestate api results 2
